unnecessary dep removed

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   },
   "homepage": "https://github.com/portsoc/server101#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "http-server": "^14.1.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
