remove nodemon - no longer needed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server101",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Example HTTP servers in Node.js using the HTTP and Express modules.",
   "main": "index.js",
   "scripts": {
     "s0": "node src/server-0-hello-world.mjs",
@@ -16,8 +16,12 @@
     "type": "git",
     "url": "git+https://github.com/portsoc/server101.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["http", "express", "server", "basic", "example", "static", "dynamic"],
+  "author": "Rich Boakes <rich@boakes.org>",
+  "contributors": [
+    "Jacek Kopecky <jacek@jacek.cz>",
+    "Matt Dennis <matt.thepie@gmail.com>"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/portsoc/server101/issues"
@@ -25,8 +29,5 @@
   "homepage": "https://github.com/portsoc/server101#readme",
   "dependencies": {
     "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
   }
 }
